--- a/Numpy Assignment#1.ipynb
+++ b/Numpy Assignment#1.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {
     "id": "SePu31zKmgS-"
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "id": "2s6o2JPgnSBr"
    },
@@ -60,7 +60,7 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
     }
    ],
    "source": [
-    "a2 = np.arange(20).reshape(4,5)\n",
+    "a2 = np.arange(20).reshape((4,5))\n",
     "a2"
    ]
   },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -468,12 +468,13 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Another method:\n",
     "np.identity(3)"
    ]
   },
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "id": "59EIQt6otKUB"
    },
@@ -532,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "id": "7VDXgRQDuJNV"
    },
@@ -544,7 +545,7 @@
        "       [28., 10., 72.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {
     "id": "3MPDaAlYueF3"
    },
@@ -587,7 +588,7 @@
        "       [ True, False,  True]])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "id": "J_qbt_EuvM7l"
    },
@@ -620,7 +621,7 @@
        "array([1, 3, 5, 7, 9])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "id": "rXUV1-ULvQdd"
    },
@@ -652,7 +653,7 @@
        "array([ 0, -1,  2, -1,  4, -1,  6, -1,  8, -1])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "id": "ensZ3lqwvlSb"
    },
@@ -689,7 +690,7 @@
        "array([ 0,  1,  2,  3,  4, 12, 12, 12, 12,  9])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "id": "VdUnsUOZwJFz"
    },
@@ -772,7 +773,7 @@
        "       [7, 8, 9]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +796,7 @@
        "       [ 7,  8,  9]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "id": "eYzephU8xmsg"
    },
@@ -834,7 +835,7 @@
        "        [10, 11, 12]]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +860,7 @@
        "        [10, 11, 12]]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "id": "pM4e9YfdyHSv"
    },
@@ -893,7 +894,7 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +915,7 @@
        "array([0, 1, 2])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +944,7 @@
        "4"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {
     "id": "5Bx4fqsLyqGD"
    },
@@ -975,7 +976,7 @@
        "       [5]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "id": "lhJPugjQzG6W"
    },
@@ -1003,29 +1004,29 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1.08222192,  1.47330304, -0.22876556, -0.06184197,  0.28605119,\n",
-       "        -1.00171726,  0.13064498,  1.25463687,  0.24693581,  1.05522433],\n",
-       "       [-0.118656  , -0.29282027,  0.88479414, -0.81437071,  0.39027188,\n",
-       "        -0.38379347,  0.39375239, -1.54591732, -0.56950648, -0.0434211 ],\n",
-       "       [-0.90825099,  0.08077445, -0.0553358 ,  0.51149704, -0.55639436,\n",
-       "         1.07116787,  1.61091509, -0.10572947, -0.06921756,  0.5150666 ],\n",
-       "       [ 0.59540294,  1.28637504,  0.33993483,  0.85696719,  0.86987398,\n",
-       "         0.20991921,  0.19158356,  1.2414887 , -0.03618289, -0.11944204],\n",
-       "       [ 0.56757261,  0.930761  , -0.49757575, -0.54780665,  0.40624464,\n",
-       "        -0.10154453, -0.3569825 ,  1.34581995,  0.89699786,  1.05488107],\n",
-       "       [ 2.18076958,  0.96102642, -0.51800769, -0.49612608,  1.45225427,\n",
-       "         0.15230501,  0.71904654, -0.10673952,  0.0927556 ,  1.14646501],\n",
-       "       [-0.6850922 , -0.15363096, -0.84925269, -0.9766385 ,  2.25131345,\n",
-       "         0.64057988, -1.12025986, -0.05401975, -0.23687336,  0.09008717],\n",
-       "       [-1.64610319,  1.36546688,  0.5156254 , -1.98524667, -2.1512924 ,\n",
-       "         0.32152912, -1.07477313, -1.5070153 ,  0.509765  , -0.57837481],\n",
-       "       [ 0.55870163, -1.76392711, -1.95209615, -1.5998169 ,  1.6115171 ,\n",
-       "         0.19700099, -0.25114217, -0.63039679, -0.82853517, -0.73566861],\n",
-       "       [ 0.51055141,  0.18361348,  0.2703249 ,  0.70964494,  0.13604148,\n",
-       "         0.27997399,  0.71867797, -0.37052238, -0.61528279, -1.473117  ]])"
+       "array([[ 0.38938275,  0.77773401, -0.00414517,  0.10214575, -0.00722495,\n",
+       "        -1.36370099,  0.08045424,  1.54083787,  1.15052366, -1.75905804],\n",
+       "       [-1.45434962,  0.52676334, -0.11555221,  0.31541306, -1.02320016,\n",
+       "        -0.50289592, -1.26381498,  0.22057255,  0.96903072, -1.76740288],\n",
+       "       [ 0.64768716,  2.7675091 ,  0.44350433,  0.0247042 ,  1.19632448,\n",
+       "         1.76161814,  1.85797628,  0.23597702, -1.42401392,  1.49209869],\n",
+       "       [-0.85953954,  0.24016736,  0.68207338,  0.57865182, -0.46795442,\n",
+       "         0.21640267, -1.07724798,  0.336477  ,  0.34420683, -0.79213556],\n",
+       "       [ 0.1173619 ,  0.29120467, -1.19377882, -1.41640907,  1.45064091,\n",
+       "         2.37025809, -0.41578759, -0.32702679,  1.9231412 , -0.91398795],\n",
+       "       [ 0.10501537, -0.3460379 ,  0.5074523 ,  0.93060074,  0.02597183,\n",
+       "        -0.15853088,  1.64228157, -0.92478486,  0.98289019,  0.5673081 ],\n",
+       "       [-0.58533364, -0.57556773,  1.69863267, -0.77639272,  1.27314379,\n",
+       "        -0.12619452,  1.18986408,  0.10341244,  0.2724234 ,  1.26067144],\n",
+       "       [-1.03474442,  0.28446044, -1.52058855,  1.23550803, -0.87344479,\n",
+       "        -0.95534415,  1.10091525,  0.43358346,  2.16694223,  0.71181258],\n",
+       "       [-0.37039472,  0.2896734 ,  0.4881792 , -0.45857171,  0.88228432,\n",
+       "        -2.48646819, -0.92753708, -0.51813301, -0.56596328,  0.61561551],\n",
+       "       [-0.79940496,  0.62739154, -0.31716822, -1.11271704, -0.6353042 ,\n",
+       "         1.77603462,  1.46652877, -1.91432063, -0.61683837,  0.81133272]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,14 +1038,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " The Minimum value of array is -2.1512923978461744 and Maximum value is 2.2513134479644235\n"
+      " The Minimum value of array is -2.48646819199058 and Maximum value is 2.767509103406203\n"
      ]
     }
    ],
@@ -1066,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
     "id": "kBXZanxIzs_F"
    },
@@ -1077,7 +1078,7 @@
        "array([2, 4])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
     "id": "JR-mHQLH0HY_"
    },
@@ -1115,7 +1116,7 @@
        "(array([1, 3, 5, 7], dtype=int64),)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {
     "id": "gfc1Lpf81ZSR"
    },
@@ -1146,14 +1147,14 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.11195731, -0.43513964, -0.68676909, -0.67403088],\n",
-       "       [-0.12264444,  0.13679318, -0.71087902, -0.53245048],\n",
-       "       [ 0.38126075,  0.39426339,  0.25510016, -0.74182231],\n",
-       "       [-3.90538187, -1.21431371,  0.91976261,  1.02092011],\n",
-       "       [ 1.74349613,  0.0351176 ,  0.72542101, -0.51342765]])"
+       "array([[-0.84209391, -0.18142136, -0.61290811,  1.56865635],\n",
+       "       [-0.37914038, -1.15918853, -1.03159991,  1.93637778],\n",
+       "       [-1.61495565, -2.36036783,  0.01017516, -0.20915526],\n",
+       "       [-0.13907405,  1.2327894 ,  1.39034132,  0.80002585],\n",
+       "       [-0.04910305,  3.06245269,  0.30470989, -0.63823015]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {
     "id": "8RYG0kLO1mHw"
    },
@@ -1188,11 +1189,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[-0.11195731, -0.43513964, -0.68676909, -0.67403088],\n",
-       "       [ 0.38126075,  0.39426339,  0.25510016, -0.74182231]])"
+       "array([[-0.84209391, -0.18142136, -0.61290811,  1.56865635],\n",
+       "       [-1.61495565, -2.36036783,  0.01017516, -0.20915526]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1221,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {
     "id": "EbwfSCrW2f9_"
    },
@@ -1236,7 +1237,7 @@
        "       [13., 14., 15.]], dtype=float32)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1257,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {
     "id": "phOxVpBM4M6D"
    },
@@ -1272,7 +1273,7 @@
        "        [13., 14., 15., 16.]]], dtype=float32)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {
     "id": "w2m9p8064VtR"
    },
@@ -1314,7 +1315,7 @@
        "        [ 8., 16.]]], dtype=float32)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1335,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {
     "id": "tmBabEJ-5JgB"
    },
@@ -1357,7 +1358,7 @@
        "       0.74535599, 0.81649658, 0.8819171 , 0.94280904, 1.        ])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {
     "id": "3pxebU2b5q9Z"
    },
@@ -1389,12 +1390,12 @@
     {
      "data": {
       "text/plain": [
-       "array([ 1.91773408,  1.06236264, -0.08516445,  0.56426673,  1.12058596,\n",
-       "       -0.07844661, -1.38473175,  0.19475746,  2.11477247,  2.3843533 ,\n",
-       "       -0.18471094,  0.76900456])"
+       "array([ 0.04870274,  1.48129902,  0.21428467,  0.09013318,  2.17403239,\n",
+       "        0.93609518,  1.68992268,  0.79734482, -0.66315643,  2.2593848 ,\n",
+       "       -0.68394937,  0.5177092 ])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {
     "id": "hiSNMgcY87Ey"
    },
@@ -1455,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {
     "id": "eCNJXPvK9IAr"
    },
@@ -1466,7 +1467,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {
     "id": "lLWAJWJJ_I3d"
    },
@@ -1509,7 +1510,7 @@
        "       [53, 94, 10]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1536,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {
     "id": "fV2-vXcR_vmu"
    },
@@ -1548,7 +1549,7 @@
        "       [ 67., 181.]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {
     "id": "_oOHdiYEAF8N"
    },
@@ -1579,13 +1580,13 @@
     {
      "data": {
       "text/plain": [
-       "array([1.52593753, 4.21897298, 3.58758584, 4.14780155, 4.09628587,\n",
-       "       5.36859269, 5.73813184, 4.24580128, 2.95244106, 3.22382312,\n",
-       "       2.55483982, 3.54400091, 4.39879666, 3.77144152, 2.83994182,\n",
-       "       3.68357225, 5.7533069 , 4.54491781, 5.63257573, 5.06732309])"
+       "array([ 0.14224909,  0.6054715 , -0.98937896,  0.09661059,  1.00650381,\n",
+       "        1.95543387,  1.79503517,  2.77648164,  2.32015788,  1.55422015,\n",
+       "        1.1913622 ,  1.04555385,  1.98667296,  2.78748384,  4.73184152,\n",
+       "        5.54667146,  5.34046885,  6.45481183,  6.69597903,  5.37839533])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
