updated numpy tasks

--- a/NumpyTask3/Numpy_Task3.ipynb
+++ b/NumpyTask3/Numpy_Task3.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "47.142857142857146"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
    "source": [
     "#type your code here\n",
     "percentage_I_Khan= 100*total_Khan/len(survey_responses) # 100 * 33/70\n",
-    "percentage_I_Khan\n"
+    "percentage_I_Khan"
    ]
   },
   {
@@ -134,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.52857143, 0.58571429, 0.64285714, ..., 0.52857143, 0.57142857,\n",
-       "       0.54285714])"
+       "array([0.48571429, 0.58571429, 0.57142857, ..., 0.5       , 0.45714286,\n",
+       "       0.45714286])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "21.279999999999998"
+       "21.18"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,17 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.01991429, 0.01932857, 0.02067143, ..., 0.02061429, 0.02025714,\n",
-       "       0.02012857])"
+       "array([0.0202    , 0.02      , 0.01932857, ..., 0.01988571, 0.02115714,\n",
+       "       0.02072857])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "100.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,13 +273,6 @@
     "I_Khan_loss_new = 100 * np.mean(large_survey < 0.5)\n",
     "I_Khan_loss_new"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
